Removed stopgap css fix; adjusted padding to be equal in skills container

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -124,7 +124,7 @@ h6 {
 .quinary-container, 
 .senary-container,
 .septenary-container {
-	margin-top: -8px;
+	// margin-top: -8px;
 	overflow: hidden;
 }
 
